# Longitudinal-Autonomous-Driving-Agent-for-a-Traffic-Light-Scenario

./: CMakeLists.txt  starting_point.cc
matlab/codegen/lib/primitives/: buildInfo.mat  defines.txt  pass_primitive.c  pass_primitive.h  pass_primitive_j0.c  pass_primitive_j0.h  primitives_data.c  primitives_data.h  primitives_initialize.c  primitives_initialize.h  primitives_rtwutil.c  primitives_rtwutil.h  primitives_terminate.c  primitives_terminate.h  primitives_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  stop_primitive.c  stop_primitive.h  stop_primitive_j0.c  stop_primitive_j0.h
